--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 		<meta charset="utf-8">
 		<title>DialogPlayDemo</title>
 		<link href="common/css/style_test.css" rel="stylesheet" type="text/css">
+		<script type="text/javascript" src="https://dialogplay.jp/js/embedded.js"></script>
+		<meta name="dialogplay-token" content="f4ff70dc-30b3-40fa-9e81-34b4426d3c1b"/>
+		<meta name="dialogplay-title" content="seikyufaq"/>
+
 	</head>
 
 	<body>
