--- a/index.html
+++ b/index.html
@@ -1,7 +1,25 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-<title>demo3</title>
-<script type="text/javascript" src="https://dialogplay.jp/js/embedded.js"></script>
-<meta name="dialogplay-token" content="f4ff70dc-30b3-40fa-9e81-34b4426d3c1b"/>
-<meta name="dialogplay-title" content="seikyufaq"/> </head> <body></body> </html>
+	<head>
+		<meta charset="utf-8">
+		<title>DialogPlayDemo</title>
+		<link href="common/css/style_test.css" rel="stylesheet" type="text/css">
+		<script type="text/javascript" src="https://dialogplay.jp/js/embedded.js"></script>
+		<meta name="dialogplay-token" content="f4ff70dc-30b3-40fa-9e81-34b4426d3c1b"/>
+		<meta name="dialogplay-title" content="seikyufaq"/>
+
+	</head>
+
+	<body>
+		<header id="header">
+			<h2>Dialog Play Demo</h2>
+		</header>
+		<div id="main">
+		</div>
+		<div id="side">
+		</div>
+		<footer id="footer">
+		</footer>
+
+	</body>
+</html>
